--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ Pillow==9.3.0
 plotly==5.11.0
 psutil==5.9.4
 # psycopg2==2.9.5
-psycopg2-binary==2.9.5 #  if on linux
+psycopg2-binary==2.9.5 #  if on linuxq
 pyinstaller==5.7.0
 pyinstaller-hooks-contrib==2022.14
 pyodbc==4.0.35
